@@ -37,13 +37,11 @@ body, td, th {
 	font-size: 11px;
 }
 
-
 html, body { height: 95%; }
 
 #minwidth { min-width: 960px; }
 
 .clr { clear: both; overflow:hidden; height: 0; }
-
 
 a, img { padding: 0; margin: 0; }
 
@@ -59,9 +57,7 @@ h1 {
 	font-weight: bold;
 }
 
-h3 {
-	font-size: 13px;
-}
+h3 {font-size: 13px;}
 
 a:link    { color: #025A8D; text-decoration: none; outline: none; }
 a:visited { color: #025A8D; text-decoration: none; outline: none; }
@@ -74,7 +70,6 @@ fieldset {
 	padding: 5px;
 	text-align: left;
 }
-
 
 fieldset.batch {
 	margin: 25px 0 10px 0;
@@ -290,32 +285,14 @@ div.configuration {
 	background-repeat: no-repeat;
 }
 
-div.toolbar-list { float: right; text-align: right; padding: 0; }
-
+div.toolbar-list 				{ float: right; text-align: right; padding: 0; }
 div.toolbar-list ul 			{ margin:0; padding:0; }
-div.toolbar-list li 			{ padding: 1px 1px 3px 4px; text-align: center; color: #666; height: 48px; list-style:none; float:left;}
+div.toolbar-list li 			{ padding: 1px 1px 3px 4px; text-align: center; color: #666; height: 48px; list-style:none; float:left; }
 div.toolbar-list li.spacer  	{ width: 10px; }
 div.toolbar-list li.divider 	{ border-right: 1px solid #eee; width: 5px; }
-
-div.toolbar-list span { float: none; width: 32px; height: 32px; margin: 0 auto; display: block; }
-
-div.toolbar-list a {
-   display: block; 
-   float: left;
-	white-space: nowrap;
-	border: 1px solid #fbfbfb;
-	padding: 1px 5px;
-	cursor: pointer;
-}
-
-div.toolbar-list a:hover {
-	border-left: 1px solid #eee;
-	border-top: 1px solid #eee;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	text-decoration: none;
-	color: #0B55C4;
-}
+div.toolbar-list span 			{ float: none; width: 32px; height: 32px; margin: 0 auto; display: block; }
+div.toolbar-list a 				{ display: block; float: left;white-space: nowrap;border: 1px solid #fbfbfb;padding: 1px 5px;cursor: pointer; }
+div.toolbar-list a:hover 		{ border-left: 1px solid #eee; border-top: 1px solid #eee; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; text-decoration: none; color: #0B55C4; }
 
 
 /* -- MASSMAIL STYLES ----------------------------- */
@@ -336,19 +313,20 @@ textarea#mm_message { width: 100%; }
 
 #content-pane { margin: 8px 10px 15px 15px;}
 
-.pane-sliders .panel   { border: 1px solid #ccc; margin-bottom: 3px;}
+.pane-sliders .panel   		{ border: 1px solid #ccc; margin-bottom: 3px;}
+.pane-sliders .panel h3 	{ background: #fafafa; color: #666}
+.pane-sliders .content 		{ background: #fff; }
+.pane-sliders .adminlist   	{ border: 0 none; font-size: 11px; }
+.pane-sliders .adminlist td { border: 0 none; }
 
-.pane-sliders .panel h3 { background: #fafafa; color: #666}
+.jpane-toggler span     	{ background: transparent url(../images/j_arrow.png) 5px 50% no-repeat; padding-left: 20px;}
+.jpane-toggler-down span 	{ background: transparent url(../images/j_arrow_down.png) 5px 50% no-repeat; padding-left: 20px;}
+.jpane-toggler-down 		{ border-bottom: 1px solid #ccc; }
 
-.pane-sliders .content { background: #fff; }
-
-.pane-sliders .adminlist     { border: 0 none; font-size: 11px; }
-.pane-sliders .adminlist td  { border: 0 none; }
-
-.jpane-toggler span     { background: transparent url(../images/j_arrow.png) 5px 50% no-repeat; padding-left: 20px;}
-.jpane-toggler-down span { background: transparent url(../images/j_arrow_down.png) 5px 50% no-repeat; padding-left: 20px;}
-
-.jpane-toggler-down {  border-bottom: 1px solid #ccc; }
+h3.jpane-toggler-down a:hover,
+h3.jpane-toggler a:hover {
+	text-decoration: none;
+}
 
 .jpane-slider ol li {
 	list-style:none;
@@ -356,14 +334,8 @@ textarea#mm_message { width: 100%; }
 	margin-top: 10px;
 }
 
-.jpane-slider {
-}
-
 .jpane-slider .paramrow {
 	margin: 15px;
-}
-
-div#content-pane label {
 }
 
 div.paramrow label:first-child {
@@ -391,14 +363,6 @@ input#jformparams_show_title1,
 input#jformparams_link_category1 {
 	margin-left: 13px;
 }
-
-
-
-h3.jpane-toggler-down a:hover,
-h3.jpane-toggler a:hover {
-	text-decoration: none;
-}
-
 /* -- TAB STYLES ----------------------------- */
 
 dl.tabs {
@@ -488,7 +452,6 @@ div.width-65 { width: 65%;}
 div.width-70 { width: 70%;}
 div.width-100 { width: 100%;}
 
-
 .clrlft { clear: left; }
 .clrrt { clear: right; }
 .fltlft { float: left; }
@@ -550,9 +513,6 @@ label#jform_fulltext-lbl {
 	padding-top: 15px;
 	margin-top: 15px;
 	width: 100%;
-}
-
-label#jform_fulltext-lbl {
 }
 
 label#jform_state-lbl  {
@@ -620,6 +580,13 @@ select#jform_catid.inputbox {
 	margin-right: 20px;
 }
 
+/* Hide the extension name on create category page */
+label#jform_extension-lbl,
+input#jform_extension {
+	display:none;
+}
+
+
 input.readonly {
 	font-size: 12px;
 	padding-top:1px;
@@ -654,7 +621,6 @@ fieldset.batch {
 	margin: 20px 0px 10px 0px;
 }
 
-
 label#jform_description-lbl {
 	padding: 10px;
 }
@@ -668,13 +634,6 @@ label#jformparams_secure1-lbl,
 label#jformparams_secure-0-lbl,
 label#jformparams_secure-1-lbl{
 	clear:none;
-}
-
-
-
-
-input#jform_offline1 {
-
 }
 
 fieldset ul li {
@@ -715,7 +674,6 @@ li#jform_access_label {
 	clear:left;
 }
 
-
 fieldset.filter{border:0;margin:0;padding:0 0 5px;}
 fieldset.filter ol{border:0;list-style:none;margin:0;padding:5px 0 0;}
 fieldset.filter ol li{float:left;padding:0 5px 0 0;}
@@ -723,7 +681,6 @@ fieldset.filter ol li fieldset{border:0;margin:0;padding:0;}
 fieldset.filter .left{float:left;}
 fieldset.filter .right{float:right;}
 fieldset.filter .right select.inputbox {margin-left: 10px;}
-
 
 table.adminform {
 	background-color: #f8f8f8;
@@ -748,17 +705,10 @@ table.adminform th {
 }
 table.adminform td { padding: 5px; text-align: left; font-size: 12px;}
 
-table.adminform td.filter{
-	text-align: left;
-}
+table.adminform td.filter { text-align: left; }
 
-table.adminform td.helpMenu{
-	text-align: right;
-}
+table.adminform td.helpMenu { text-align: right; }
 
-table.adminform {
-	
-}
 
 /* -- TABLE STYLES ----------------------------- */
 
@@ -1120,21 +1070,21 @@ input.system-openid, input.com-system-openid {
 
 /* -- ICON STYLES ----------------------------- */
 
-.icon-16-archive 	{ background-image: url(../images/menu/icon-16-archive.png); }
-.icon-16-article 	{ background-image: url(../images/menu/icon-16-article.png); }
-.icon-16-category 	{ background-image: url(../images/menu/icon-16-category.png); }
-.icon-16-checkin 	{ background-image: url(../images/menu/icon-16-checkin.png); }
-.icon-16-clear 		{ background-image: url(../images/menu/icon-16-clear.png); }
-.icon-16-component	{ background-image: url(../images/menu/icon-16-component.png); }
-.icon-16-config 	{ background-image: url(../images/menu/icon-16-config.png); }
-.icon-16-content 	{ background-image: url(../images/menu/icon-16-content.png); }
-.icon-16-cpanel 	{ background-image: url(../images/menu/icon-16-cpanel.png); }
-.icon-16-default 	{ background-image: url(../images/menu/icon-16-default.png); }
-.icon-16-featured 	{ background-image: url(../images/menu/icon-16-frontpage.png); }
-.icon-16-groups		{ background-image: url(../images/menu/icon-16-groups.png); }
-.icon-16-help		{ background-image: url(../images/menu/icon-16-help.png); }
+.icon-16-archive 		{ background-image: url(../images/menu/icon-16-archive.png); }
+.icon-16-article 		{ background-image: url(../images/menu/icon-16-article.png); }
+.icon-16-category 		{ background-image: url(../images/menu/icon-16-category.png); }
+.icon-16-checkin 		{ background-image: url(../images/menu/icon-16-checkin.png); }
+.icon-16-clear 			{ background-image: url(../images/menu/icon-16-clear.png); }
+.icon-16-component		{ background-image: url(../images/menu/icon-16-component.png); }
+.icon-16-config 		{ background-image: url(../images/menu/icon-16-config.png); }
+.icon-16-content 		{ background-image: url(../images/menu/icon-16-content.png); }
+.icon-16-cpanel 		{ background-image: url(../images/menu/icon-16-cpanel.png); }
+.icon-16-default 		{ background-image: url(../images/menu/icon-16-default.png); }
+.icon-16-featured 		{ background-image: url(../images/menu/icon-16-frontpage.png); }
+.icon-16-groups			{ background-image: url(../images/menu/icon-16-groups.png); }
+.icon-16-help			{ background-image: url(../images/menu/icon-16-help.png); }
 
-.icon-16-help		{ background-image: url(../images/menu/icon-16-help.png); }
+.icon-16-help			{ background-image: url(../images/menu/icon-16-help.png); }
 
 .icon-16-help-this		{ background-image: url(../images/menu/icon-16-help-this.png); }
 
@@ -1142,40 +1092,40 @@ input.system-openid, input.com-system-openid {
 .icon-16-help-docs		{ background-image: url(../images/menu/icon-16-help-docs.png); }
 .icon-16-help-jed		{ background-image: url(../images/menu/icon-16-help-jed.png); }
 .icon-16-help-jrd		{ background-image: url(../images/menu/icon-16-help-jrd.png); }
-.icon-16-help-community		{ background-image: url(../images/menu/icon-16-help-community.png); }
-.icon-16-help-security		{ background-image: url(../images/menu/icon-16-help-security.png); }
+.icon-16-help-community	{ background-image: url(../images/menu/icon-16-help-community.png); }
+.icon-16-help-security	{ background-image: url(../images/menu/icon-16-help-security.png); }
 .icon-16-help-dev		{ background-image: url(../images/menu/icon-16-help-dev.png); }
 .icon-16-help-shop		{ background-image: url(../images/menu/icon-16-help-shop.png); }
 
 
-.icon-16-info 		{ background-image: url(../images/menu/icon-16-info.png); }
-.icon-16-install 	{ background-image: url(../images/menu/icon-16-install.png);}
-.icon-16-language 	{ background-image: url(../images/menu/icon-16-language.png);}
-.icon-16-levels 	{ background-image: url(../images/menu/icon-16-levels.png);}
-.icon-16-logout 	{ background-image: url(../images/menu/icon-16-logout.png);}
+.icon-16-info 			{ background-image: url(../images/menu/icon-16-info.png); }
+.icon-16-install 		{ background-image: url(../images/menu/icon-16-install.png);}
+.icon-16-language 		{ background-image: url(../images/menu/icon-16-language.png);}
+.icon-16-levels 		{ background-image: url(../images/menu/icon-16-levels.png);}
+.icon-16-logout 		{ background-image: url(../images/menu/icon-16-logout.png);}
 .icon-16-maintenance 	{ background-image: url(../images/menu/icon-16-maintenance.png); }
-.icon-16-massmail 	{ background-image: url(../images/menu/icon-16-massmail.png); }
-.icon-16-media 		{ background-image: url(../images/menu/icon-16-media.png);}
-.icon-16-menu 		{ background-image: url(../images/menu/icon-16-menu.png); }
-.icon-16-menumgr 	{ background-image: url(../images/menu/icon-16-menumgr.png); }
+.icon-16-massmail 		{ background-image: url(../images/menu/icon-16-massmail.png); }
+.icon-16-media 			{ background-image: url(../images/menu/icon-16-media.png);}
+.icon-16-menu 			{ background-image: url(../images/menu/icon-16-menu.png); }
+.icon-16-menumgr 		{ background-image: url(../images/menu/icon-16-menumgr.png); }
 /* .icon-16-messages 	{ background-image: url(../images/menu/icon-16-messages.png); } */
-.icon-16-module 	{ background-image: url(../images/menu/icon-16-module.png); }
+.icon-16-module 		{ background-image: url(../images/menu/icon-16-module.png); }
 /* .icon-16-new 		{ background-image: url(../images/menu/icon-16-new.png); } */
-.icon-16-newarticle   { background-image: url(../images/menu/icon-16-newarticle.png); }
-.icon-16-newcategory  { background-image: url(../images/menu/icon-16-newcategory.png); }
-.icon-16-newgroup 	{ background-image: url(../images/menu/icon-16-newgroup.png); }
-.icon-16-newlevel 	{ background-image: url(../images/menu/icon-16-newlevel.png); }
-.icon-16-newuser 	{ background-image: url(../images/menu/icon-16-newuser.png); }
-.icon-16-plugin 	{ background-image: url(../images/menu/icon-16-plugin.png); }
-.icon-16-purge	 	{ background-image: url(../images/menu/icon-16-purge.png); }
-.icon-16-readmess 	{ background-image: url(../images/menu/icon-16-readmess.png); }
-.icon-16-section 	{ background-image: url(../images/menu/icon-16-section.png); }
-.icon-16-static 	{ background-image: url(../images/menu/icon-16-static.png); }
-.icon-16-stats 		{ background-image: url(../images/menu/icon-16-stats.png); }
-.icon-16-themes 	{ background-image: url(../images/menu/icon-16-themes.png); }
-.icon-16-trash 		{ background-image: url(../images/menu/icon-16-trash.png); }
-.icon-16-user 		{ background-image: url(../images/menu/icon-16-user.png); }
-.icon-16-writemess 	{ background-image: url(../images/menu/icon-16-writemess.png); }
+.icon-16-newarticle   	{ background-image: url(../images/menu/icon-16-newarticle.png); }
+.icon-16-newcategory  	{ background-image: url(../images/menu/icon-16-newcategory.png); }
+.icon-16-newgroup 		{ background-image: url(../images/menu/icon-16-newgroup.png); }
+.icon-16-newlevel 		{ background-image: url(../images/menu/icon-16-newlevel.png); }
+.icon-16-newuser 		{ background-image: url(../images/menu/icon-16-newuser.png); }
+.icon-16-plugin 		{ background-image: url(../images/menu/icon-16-plugin.png); }
+.icon-16-purge	 		{ background-image: url(../images/menu/icon-16-purge.png); }
+.icon-16-readmess 		{ background-image: url(../images/menu/icon-16-readmess.png); }
+.icon-16-section 		{ background-image: url(../images/menu/icon-16-section.png); }
+.icon-16-static 		{ background-image: url(../images/menu/icon-16-static.png); }
+.icon-16-stats 			{ background-image: url(../images/menu/icon-16-stats.png); }
+.icon-16-themes 		{ background-image: url(../images/menu/icon-16-themes.png); }
+.icon-16-trash 			{ background-image: url(../images/menu/icon-16-trash.png); }
+.icon-16-user 			{ background-image: url(../images/menu/icon-16-user.png); }
+.icon-16-writemess 		{ background-image: url(../images/menu/icon-16-writemess.png); }
 
 
 /* -- TOOLBAR ICON STYLES ----------------------------- */
@@ -1184,7 +1134,7 @@ input.system-openid, input.com-system-openid {
 .icon-32-help 			{ background-image: url(../images/toolbar/icon-32-help.png); }
 .icon-32-cancel 		{ background-image: url(../images/toolbar/icon-32-cancel.png); }
 .icon-32-config 		{ background-image: url(../images/toolbar/icon-32-config.png); }
-.icon-32-apply 		{ background-image: url(../images/toolbar/icon-32-apply.png); }
+.icon-32-apply 			{ background-image: url(../images/toolbar/icon-32-apply.png); }
 .icon-32-back			{ background-image: url(../images/toolbar/icon-32-back.png); }
 .icon-32-forward		{ background-image: url(../images/toolbar/icon-32-forward.png); }
 .icon-32-save 			{ background-image: url(../images/toolbar/icon-32-save.png); }
@@ -1198,11 +1148,11 @@ input.system-openid, input.com-system-openid {
 .icon-32-css 			{ background-image: url(../images/toolbar/icon-32-css.png); }
 .icon-32-menus 			{ background-image: url(../images/toolbar/icon-32-menu.png); }
 .icon-32-publish 		{ background-image: url(../images/toolbar/icon-32-publish.png); }
-.icon-32-unpublish 	{ background-image: url(../images/toolbar/icon-32-unpublish.png);}
+.icon-32-unpublish 		{ background-image: url(../images/toolbar/icon-32-unpublish.png);}
 .icon-32-restore		{ background-image: url(../images/toolbar/icon-32-revert.png); }
-.icon-32-trash 		{ background-image: url(../images/toolbar/icon-32-trash.png); }
+.icon-32-trash 			{ background-image: url(../images/toolbar/icon-32-trash.png); }
 .icon-32-archive 		{ background-image: url(../images/toolbar/icon-32-archive.png); }
-.icon-32-unarchive 	{ background-image: url(../images/toolbar/icon-32-unarchive.png); }
+.icon-32-unarchive 		{ background-image: url(../images/toolbar/icon-32-unarchive.png); }
 .icon-32-preview 		{ background-image: url(../images/toolbar/icon-32-preview.png); }
 .icon-32-default 		{ background-image: url(../images/toolbar/icon-32-default.png); }
 .icon-32-refresh		{ background-image: url(../images/toolbar/icon-32-refresh.png); }
@@ -1210,8 +1160,8 @@ input.system-openid, input.com-system-openid {
 /* -- HEADER ICON STYLES ----------------------------- */
 .icon-48-generic 		{ background-image: url(../images/header/icon-48-generic.png); }
 .icon-48-checkin 		{ background-image: url(../images/header/icon-48-checkin.png); }
-.icon-48-clear 		{ background-image: url(../images/header/icon-48-clear.png); }
-.icon-48-purge 		{ background-image: url(../images/header/icon-48-purge.png); }
+.icon-48-clear 			{ background-image: url(../images/header/icon-48-clear.png); }
+.icon-48-purge 			{ background-image: url(../images/header/icon-48-purge.png); }
 .icon-48-cpanel 		{ background-image: url(../images/header/icon-48-cpanel.png); }
 .icon-48-config 		{ background-image: url(../images/header/icon-48-config.png); }
 .icon-48-groups 		{ background-image: url(../images/header/icon-48-groups.png); }
@@ -1219,31 +1169,31 @@ input.system-openid, input.com-system-openid {
 .icon-48-module 		{ background-image: url(../images/header/icon-48-module.png); }
 .icon-48-menu 			{ background-image: url(../images/header/icon-48-menu.png); }
 .icon-48-menumgr 		{ background-image: url(../images/header/icon-48-menumgr.png); }
-.icon-48-trash 		{ background-image: url(../images/header/icon-48-trash.png); }
+.icon-48-trash 			{ background-image: url(../images/header/icon-48-trash.png); }
 .icon-48-user	 		{ background-image: url(../images/header/icon-48-user.png); }
-.icon-48-inbox 		{ background-image: url(../images/header/icon-48-inbox.png); }
-.icon-48-msgconfig 	{ background-image: url(../images/header/icon-48-message_config.png); }
-.icon-48-langmanager { background-image: url(../images/header/icon-48-language.png); }
-.icon-48-mediamanager{ background-image: url(../images/header/icon-48-media.png); }
-.icon-48-plugin 	{ background-image: url(../images/header/icon-48-plugin.png); }
-.icon-48-help_header { background-image: url(../images/header/icon-48-help_header.png); }
-.icon-48-impressions { background-image: url(../images/header/icon-48-stats.png); }
+.icon-48-inbox 			{ background-image: url(../images/header/icon-48-inbox.png); }
+.icon-48-msgconfig 		{ background-image: url(../images/header/icon-48-message_config.png); }
+.icon-48-langmanager 	{ background-image: url(../images/header/icon-48-language.png); }
+.icon-48-mediamanager	{ background-image: url(../images/header/icon-48-media.png); }
+.icon-48-plugin 		{ background-image: url(../images/header/icon-48-plugin.png); }
+.icon-48-help_header 	{ background-image: url(../images/header/icon-48-help_header.png); }
+.icon-48-impressions 	{ background-image: url(../images/header/icon-48-stats.png); }
 .icon-48-browser 		{ background-image: url(../images/header/icon-48-stats.png); }
 .icon-48-searchtext 	{ background-image: url(../images/header/icon-48-stats.png); }
-.icon-48-thememanager{ background-image: url(../images/header/icon-48-themes.png); }
-.icon-48-writemess 	{ background-image: url(../images/header/icon-48-writemess.png); }
-.icon-48-frontpage 	{ background-image: url(../images/header/icon-48-frontpage.png); }
-.icon-48-sections 	{ background-image: url(../images/header/icon-48-section.png); }
-.icon-48-article-add 		{ background-image: url(../images/header/icon-48-article-add.png); }
-.icon-48-article-edit 		{ background-image: url(../images/header/icon-48-article-edit.png); }
+.icon-48-thememanager	{ background-image: url(../images/header/icon-48-themes.png); }
+.icon-48-writemess 		{ background-image: url(../images/header/icon-48-writemess.png); }
+.icon-48-frontpage 		{ background-image: url(../images/header/icon-48-frontpage.png); }
+.icon-48-sections 		{ background-image: url(../images/header/icon-48-section.png); }
+.icon-48-article-add 	{ background-image: url(../images/header/icon-48-article-add.png); }
+.icon-48-article-edit 	{ background-image: url(../images/header/icon-48-article-edit.png); }
 .icon-48-article 		{ background-image: url(../images/header/icon-48-article.png); }
 .icon-48-categories 	{ background-image: url(../images/header/icon-48-category.png); }
 .icon-48-install 		{ background-image: url(../images/header/icon-48-extension.png); }
 .icon-48-dbbackup		{ background-image: url(../images/header/icon-48-backup.png); }
-.icon-48-dbrestore 	{ background-image: url(../images/header/icon-48-dbrestore.png); }
+.icon-48-dbrestore 		{ background-image: url(../images/header/icon-48-dbrestore.png); }
 .icon-48-dbquery 		{ background-image: url(../images/header/icon-48-query.png); }
 .icon-48-systeminfo 	{ background-image: url(../images/header/icon-48-info.png); }
-.icon-48-massmail 	{ background-image: url(../images/header/icon-48-massmail.png); }
+.icon-48-massmail 		{ background-image: url(../images/header/icon-48-massmail.png); }
 
 /* -- BASIC MENU STYLES ----------------------------- */
 
@@ -1258,7 +1208,7 @@ input.system-openid, input.com-system-openid {
 #menu li li ul {  top: 0; left: 0; }
 
 #menu li.hover ul               {  visibility: visible; }
-#menu li.hover ul li ul 		  {  visibility: hidden;  }
+#menu li.hover ul li ul 		{  visibility: hidden;  }
 #menu li.hover li.hover ul      {  visibility: visible;  left: 100%; }
 
 /* ---- Menu layout -------------------------- */
@@ -1398,7 +1348,6 @@ div.message {
 	margin: 0;
 	padding: 2px 0px 0px 0px;
 }
-
 
 .outline {
   border: 1px solid #cccccc;
